--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 *.npz filter=lfs diff=lfs merge=lfs -text
 *.gz filter=lfs diff=lfs merge=lfs -text
 *.tar.gz filter=lfs diff=lfs merge=lfs -text
+*.at filter=lfs diff=lfs merge=lfs -text
